--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,18 @@
     "name": "ebcms/framework",
     "description": "ebcms framework",
     "type": "library",
+    "license": "MIT",
+    "authors": [
+        {
+            "name": "ebcms",
+            "email": "1540837821@qq.com"
+        }
+    ],
+    "autoload": {
+        "psr-4": {
+            "Ebcms\\": "src/"
+        }
+    },
     "require": {
         "psr/log": "^1.1",
         "psr/cache": "^1.0",
@@ -14,22 +26,12 @@
         "psr/simple-cache": "^1.0",
         "psr/http-client": "^1.0",
         "psr/http-factory": "^1.0",
-        "ebcms/psr11": "^1.0",
+        "ebcms/psr11": "^2.0",
         "ebcms/psr14": "^1.0",
         "ebcms/psr16-null": "^1.0",
         "ebcms/psr17": "^1.0",
-        "ebcms/router": "^1.0"
-    },
-    "autoload": {
-        "psr-4": {
-            "Ebcms\\": "src/"
-        }
-    },
-    "license": "MIT",
-    "authors": [
-        {
-            "name": "ebcms",
-            "email": "1540837821@qq.com"
-        }
-    ]
+        "ebcms/router": "^1.0",
+        "mobiledetect/mobiledetectlib": "^2.8",
+        "ebcms/template": "^1.0"
+    }
 }
